# veris-hackathon

./: .gitignore  README.md
backend/: AGENT_DATA_FLOW.md  README.md  pyproject.toml
backend/app/: agents_sdk_pipeline.py  config.py  main.py  models.py  orchestrator.py
backend/app/agents/: environment_agent.py  manager_agent.py  yield_agent.py
backend/app/clients/: geocoding.py  open_meteo.py
backend/data/: panels.csv
backend/scripts/: generate_synthetic_panels.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  styles.css
